fix: z-index navbar 9999 to 999

--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -1,5 +1,5 @@
 .container-navbar{
-  z-index: 9999;
+  z-index: 999;
   width: 100%;
   height: 90px;
   position: fixed;
